[gd_scene load_steps=22 format=3 uid="uid://d2svflf4c353a"]

[ext_resource type="Script" uid="uid://cros6y4ci8q1w" path="res://main.gd" id="1_4c57u"]
[ext_resource type="PackedScene" uid="uid://c258qhqu3k1lu" path="res://Modeller/ağız/human_mouth_detailed.glb" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bwy0lougcda1y" path="res://Modeller/herşey/model.glb" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://ua3te58ymci7" path="res://Sahneler/karbonhidrat.tscn" id="4_efxa6"]
[ext_resource type="PackedScene" uid="uid://4pygo1uyp3n4" path="res://Sahneler/protein.tscn" id="5_dg77c"]
[ext_resource type="PackedScene" uid="uid://d5wlfebcgkoi" path="res://Sahneler/yag.tscn" id="6_ycdy4"]
[ext_resource type="AudioStream" uid="uid://o41ogru081pd" path="res://Sesler/iç.ogg" id="7_4c57u"]
[ext_resource type="AudioStream" uid="uid://dy1gv2v0s6g4m" path="res://Sesler/nam nam.ogg" id="7_272bh"]
[ext_resource type="AudioStream" uid="uid://y46q6gieiawc" path="res://Sesler/sert.ogg" id="8_kek77"]
[ext_resource type="AudioStream" uid="uid://bv8r3fs3kxfxf" path="res://Sesler/hmm.ogg" id="9_4c57u"]
[ext_resource type="Texture2D" uid="uid://bydgv0e8x1tha" path="res://Modeller/MOTW_312_Brick_Wall_Albedo_4k.png" id="12_dg77c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7dm0k"]
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_ig7tw"]
top_radius = 0.065
bottom_radius = 0.08

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h2yge"]
sky_top_color = Color(0.46994036, 0.84237134, 0.999525, 1)
sky_horizon_color = Color(0.8789494, 0.5833722, 0.14516902, 1)

[sub_resource type="Sky" id="Sky_lquwl"]
sky_material = SubResource("ProceduralSkyMaterial_h2yge")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
background_color = Color(0.44748592, 0.7051155, 0.84152585, 1)
sky = SubResource("Sky_lquwl")
ambient_light_source = 2
ambient_light_color = Color(0.69135684, 0.6913568, 0.69135684, 1)
ambient_light_energy = 1.32
reflected_light_source = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_efxa6"]
dof_blur_near_distance = 17.98

[sub_resource type="SphereShape3D" id="SphereShape3D_lquwl"]
radius = 0.17990136

[sub_resource type="BoxShape3D" id="BoxShape3D_4c57u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dg77c"]
albedo_texture = ExtResource("12_dg77c")
roughness = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_4c57u"]
material = SubResource("StandardMaterial3D_dg77c")
size = Vector2(2, 20)

[node name="Main" type="Node3D"]
script = ExtResource("1_4c57u")

[node name="Agiz" parent="." instance=ExtResource("2_h2yge")]
transform = Transform3D(-3.2849998, 0, -2.871838e-07, 0, 3.2849998, 0, 2.871838e-07, 0, -3.2849998, -0.0066101253, 3.0432081, -0.40069306)

[node name="Area3D" type="Area3D" parent="Agiz"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Agiz/Area3D"]
shape = SubResource("SphereShape3D_7dm0k")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -0.018146276, 2.09546, -2.9218082)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7071068, 0.7071068, 0, -0.7071068, 0.7071068, 0.8215525, 2.3909407, 0)
light_color = Color(1, 1, 0.35686275, 1)
light_energy = 2.695

[node name="Boru" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6122608, 0)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")
camera_attributes = SubResource("CameraAttributesPractical_efxa6")

[node name="Organlar" parent="." groups=["Organ"] instance=ExtResource("4_1bvp3")]
transform = Transform3D(-1.2688329, 0, -1.10924894e-07, 0, 1.2688329, 0, 1.10924894e-07, 0, -1.2688329, 0.35591316, 1.3770758, -0.051958084)

[node name="KaracigerArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "Karaciger"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/KaracigerArea"]
transform = Transform3D(1.8979821, -1.9058241e-21, -5.684342e-14, 0, 1.1498023, 0, 1.2789769e-13, 2.8184946e-08, 1.4990581, -0.13164774, 0.6673753, -0.017816557)
shape = SubResource("SphereShape3D_lquwl")

[node name="MideArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "Mide"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/MideArea"]
transform = Transform3D(1.405438, -2.752857e-21, -5.684342e-14, 0, 1.1498023, 0, 1.1368684e-13, 2.8184946e-08, 1.4990581, 0.20124216, 0.46268332, -0.017816527)
shape = SubResource("SphereShape3D_lquwl")

[node name="PankreasArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "Pankreas"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/PankreasArea"]
transform = Transform3D(1.0623411, -1.4293681e-21, -5.684342e-14, 0, 0.40158466, 0, 1.2789769e-13, 9.84399e-09, 1.4990581, -0.0154109895, 0.1951977, -0.017816545)
shape = SubResource("SphereShape3D_lquwl")

[node name="OnIkiParmakArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "OnIki_Parmak"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/OnIkiParmakArea"]
transform = Transform3D(0.49181688, -5.293956e-21, -4.2632564e-14, 0, 1.0752665, 0, 9.2370556e-14, 2.6357858e-08, 0.471518, -0.25774974, 0.1951977, -0.017816562)
shape = SubResource("SphereShape3D_lquwl")

[node name="KalinBagirsakArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "Kalin_Bagirsak"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/KalinBagirsakArea"]
transform = Transform3D(2.2897785, -2.646978e-21, -1.1368684e-13, 0, 0.56761503, 0, 3.6948222e-13, 1.3913871e-08, 1.4990582, -0.0154109895, 0.029764414, 0.092668414)
shape = SubResource("SphereShape3D_lquwl")

[node name="InceBagirsakArea" type="Area3D" parent="Organlar" groups=["Organ"]]
metadata/organ_adi = "Ince_Bagirsak"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/InceBagirsakArea"]
transform = Transform3D(1.6622515, -8.682088e-21, -1.2789769e-13, 0, 1.4537396, 0, 2.5579538e-13, 3.5635324e-08, 1.4990581, -0.0154109895, -0.27993786, 0.092668414)
shape = SubResource("SphereShape3D_lquwl")

[node name="Boş" type="Area3D" parent="Organlar" groups=["Organ"]]
transform = Transform3D(1, 0, -7.1054274e-15, 0, 1, 0, 7.1054274e-15, 0, 1, 1.4901161e-07, 0, -1.8675704)
metadata/organ_adi = "Bos"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/Boş"]
transform = Transform3D(10.699597, 0, -2.1316282e-14, 0, 6.980989, 0, 1.1368684e-13, 0, 1.0000005, 0, 0, 0)
shape = SubResource("BoxShape3D_4c57u")

[node name="AgizArea" type="Area3D" parent="Organlar" groups=["Organ"]]
transform = Transform3D(1, 0, -7.1054274e-15, 0, 1, 0, 7.1054274e-15, 0, 1, 0.30967924, 1.2251263, 2.9802322e-08)
metadata/organ_adi = "Agiz"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Organlar/AgizArea"]
transform = Transform3D(3.3181841, 0, -2.842171e-14, 0, -2.8340771, 0, 8.526513e-14, 0, 4.22934, -0.03911084, 0.07641578, 0.26352122)
shape = SubResource("SphereShape3D_7dm0k")

[node name="Besinler" type="Node3D" parent="."]

[node name="Karbonhidrat" parent="Besinler" groups=["Besin"] instance=ExtResource("4_efxa6")]
transform = Transform3D(1, 0, 0, 0, 0.83762336, 0.5462482, 0, -0.5462482, 0.83762336, -1.4076002, 1.688098, 0)

[node name="Protein" parent="Besinler" groups=["Besin", "Besinn"] instance=ExtResource("5_dg77c")]
transform = Transform3D(0.6696233, 0.7427009, 0, -0.39157984, 0.3530506, -0.8497179, -0.63108623, 0.56899095, 0.5272376, -2.4067183, 2.657909, 0)

[node name="Yag" parent="Besinler" instance=ExtResource("6_ycdy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4700543, 2.554924, -0.36308265)

[node name="YagSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4c57u")

[node name="ProteinSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kek77")

[node name="KarbonhidratSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_272bh")

[node name="OrganSesi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4c57u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnSonYenilen" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="OrganBilgi" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0.43137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.8509804, 1, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/shadow_offset_x = 1
theme_override_font_sizes/font_size = 32

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(51.063198, 0, 0, 0, -1.5218087e-06, 3.8539438, 0, -34.814926, -1.6846124e-07, 0, 0, 23.64692)
mesh = SubResource("PlaneMesh_4c57u")

[node name="RespawnPoints" type="Node3D" parent="."]

[node name="YagPoint" type="Node3D" parent="RespawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5381111, 2.6620603, 0)

[node name="ProteinPoint" type="Node3D" parent="RespawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2926257, 2.1509464, 0)

[node name="KarbonhidratPoint" type="Node3D" parent="RespawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3880026, 1.7906169, 0)
