extends Node3D

# Besin tipleri
enum BesinTipi { YOK, YAG, PROTEIN, KARBONHIDRAT }

# Mevcut durum
var current_state = BesinTipi.YOK
var son_yenilen = "HenÃ¼z besin yenilmedi"
var secili_organ: String = ""

@export var yag_scene: PackedScene
@export var protein_scene: PackedScene
@export var karbonhidrat_scene: PackedScene
var tutulan_besin: Node3D = null
var dragging := false

@onready var respawn_yag = $RespawnPoints/YagPoint
@onready var respawn_protein = $RespawnPoints/ProteinPoint
@onready var respawn_karbonhidrat = $RespawnPoints/KarbonhidratPoint
@onready var respawn_su = $RespawnPoints/SuPoint

# SÃ¼rÃ¼kleme
var offset = Vector3.ZERO

# Referanslar
@onready var camera = $Camera3D
@onready var agiz_area = $Agiz/Area3D
@onready var ui_label = $CanvasLayer/EnSonYenilen
@onready var organ_bilgi_label = $CanvasLayer/OrganBilgi
@onready var yag_sesi = $YagSesi
@onready var protein_sesi = $ProteinSesi
@onready var karbonhidrat_sesi = $KarbonhidratSesi
@onready var organ_sesi = $OrganSesi

# Kamera pozisyonlarÄ± - ORGANLARA TIKLANINCA KAMERA HAREKET EDER
var kamera_pozisyonlari = {
	"Agiz": Vector3(0.571, 3.012, -1.406),
	"Mide": Vector3(-0.018, 2.095, -0.705),
	"OnIki_Parmak": Vector3(0.770, 1.700, -0.705),
	"Ince_Bagirsak": Vector3(0.821, 1.204, -1.085),
	"Kalin_Bagirsak": Vector3(0.821, 1.535, -1.085),
	"Karaciger": Vector3(0.763, 2.142, -0.705),
	"Pankreas": Vector3(0.763, 1.688, -0.705),
	"Bos": Vector3(-0.018, 2.095, -2.922),
	"Yutak": Vector3(-0.329, 2.576, -0.47),
	"YemekBorusu": Vector3(-0.155, 2.426, -0.244),
	"Safra": Vector3(0.681, 1.99, -0.474),
}


# Her organ iÃ§in label pozisyonlarÄ± (ekran koordinatlarÄ±)
var label_pozisyonlari = {
	"Agiz": Vector2(50, 100),
	"Mide": Vector2(1150, 100),
	"OnIki_Parmak": Vector2(50, 100),
	"Ince_Bagirsak": Vector2(50, 100),
	"Kalin_Bagirsak": Vector2(50, 100),
	"Karaciger": Vector2(50, 100),
	"Pankreas": Vector2(50, 100),
	"Bos": Vector2(50, 100),
	"Yutak": Vector2(900, 100),
	"YemekBorusu": Vector2(930, 100),
	"Safra": Vector2(50, 650),
}

var organ_aciklamalari = {
	"Agiz": {
		BesinTipi.YOK: "Sindirimin baÅŸladÄ±ÄŸÄ± yerdir\nBesinlerin hepsi burada mekanik olarak parÃ§alanÄ±r\nTÃ¼kÃ¼rÃ¼k bezlerinden tÃ¼kÃ¼rÃ¼k salgÄ±layarak sindirime\nyardÄ±mcÄ± olur.\nTÃ¼kÃ¼rÃ¼k bezlerinin salgÄ±ladÄ±ÄŸÄ± amilaz enzimi\nile karbonhidratlarÄ±n kimyasal sindirimi de burada baÅŸlar",
		BesinTipi.YAG: "AÄIZ\n\nYaÄŸlar aÄŸÄ±zda SÄ°NDÄ°RÄ°LMEZ.\n\nÃ‡alÄ±ÅŸma Durumu: âŒ YaÄŸ sindirimi yok",
		BesinTipi.PROTEIN: "AÄIZ\n\nProteinler aÄŸÄ±zda kimyasal olarak SÄ°NDÄ°RÄ°LMEZ.\nSadece Ã§iÄŸneme olur.\n\nÃ‡alÄ±ÅŸma Durumu: âŒ Protein sindirimi yok",
		BesinTipi.KARBONHIDRAT: "AÄIZ\n\nKarbonhidratlar aÄŸÄ±zda SÄ°NDÄ°RÄ°LÄ°R!\nTÃ¼kÃ¼rÃ¼kteki AMÄ°LAZ enzimi niÅŸastayÄ± parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Aktif olarak sindirim yapÄ±yor"
	},
	"Mide": {
		BesinTipi.YOK: "GeÃ§ici bir depo gÃ¶revi gÃ¶rÃ¼r.\nMÄ°DE Ã–ZSUYU denilen sindirim sÄ±vÄ±sÄ±nÄ± Ã¼retir.\nHem mekanik hem de kimyasal sindirim yapabilir.",
		BesinTipi.YAG: "MÄ°DE\n\nYaÄŸlar midede SÄ°NDÄ°RÄ°LMEZ.\n\nÃ‡alÄ±ÅŸma Durumu: âŒ Sindirim Yok",
		BesinTipi.PROTEIN: "MÄ°DE\n\nProteinler midede SÄ°NDÄ°RÄ°LÄ°R!\nPEPSÄ°N enzimi ve HCl asit proteinleri parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Aktif olarak sindirim yapÄ±yor",
		BesinTipi.KARBONHIDRAT: "MÄ°DE\n\nKarbonhidratlar midede kimyasal olarak sindirilmez!.\nAsit ortam amilaz aktivitesini durdurur.\n\nÃ‡alÄ±ÅŸma Durumu: âŒ Sindirim durmuÅŸ"
	},
	"OnIki_Parmak": {
		BesinTipi.YOK: "",
		BesinTipi.YAG: "ON Ä°KÄ° PARMAK BAÄIRSAÄI\n\nYaÄŸ sindirimi YOÄUN olarak devam eder!\nSafra ve pankreas lipaz enzimi buraya salgÄ±lanÄ±r.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… YaÄŸ sindirimi devam ediyor",
		BesinTipi.PROTEIN: "ON Ä°KÄ° PARMAK BAÄIRSAÄI\n\nProtein sindirimi devam eder!\nPankreas tripsin enzimi salgÄ±lar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Protein sindirimi devam ediyor",
		BesinTipi.KARBONHIDRAT: "ON Ä°KÄ° PARMAK BAÄIRSAÄI\n\nKarbonhidrat sindirimi devam eder!\nPankreas amilaz enzimi salgÄ±lar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Karbonhidrat sindirimi devam ediyor"
	},
	"Ince_Bagirsak": {
		BesinTipi.YOK: "Sindirim tamamlandÄ±ÄŸÄ± organdÄ±r.\nBesinler ve diÄŸer molekÃ¼ller burada kana karÄ±ÅŸÄ±r.",
		BesinTipi.YAG: "Ä°NCE BAÄIRSAK\n\nYaÄŸlar ince baÄŸÄ±rsakta TAM SÄ°NDÄ°RÄ°LÄ°R!\nSafra yaÄŸlarÄ± emÃ¼lsifiye eder, LIPAZ parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Aktif olarak sindirim yapÄ±yor",
		BesinTipi.PROTEIN: "Ä°NCE BAÄIRSAK\n\nProteinler ince baÄŸÄ±rsakta TAM SÄ°NDÄ°RÄ°LÄ°R!\nTRÄ°PSÄ°N ve PEPTÄ°DAZ enzimleri amino asitlere ayÄ±rÄ±r.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Aktif olarak sindirim yapÄ±yor",
		BesinTipi.KARBONHIDRAT: "Ä°NCE BAÄIRSAK\n\nKarbonhidratlar ince baÄŸÄ±rsakta TAM SÄ°NDÄ°RÄ°LÄ°R!\nPANKREAS AMÄ°LAZI basit ÅŸekerlere ayÄ±rÄ±r.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Aktif olarak sindirim yapÄ±yor"
	},
	"Kalin_Bagirsak": {
		BesinTipi.YOK: "KalÄ±n baÄŸÄ±rsak, enzim Ã¼retmez ve sindirim YAPMAZ.\nSindirilen besinlerin artÄ±klarÄ±nÄ±\nanÃ¼s yoluyla dÄ±ÅŸarÄ± atar.",
		BesinTipi.YAG: "KALIN BAÄIRSAK\n\nSindirim tamamlanmÄ±ÅŸ, emilim aÅŸamasÄ±.\nSu emilimi ve dÄ±ÅŸkÄ± oluÅŸumu gerÃ§ekleÅŸir.\n\nÃ‡alÄ±ÅŸma Durumu: ğŸŸ¡ Sindirim yok, emilim var",
		BesinTipi.PROTEIN: "KALIN BAÄIRSAK\n\nSindirim tamamlanmÄ±ÅŸ, emilim aÅŸamasÄ±.\nSu emilimi ve dÄ±ÅŸkÄ± oluÅŸumu gerÃ§ekleÅŸir.\n\nÃ‡alÄ±ÅŸma Durumu: ğŸŸ¡ Sindirim yok, emilim var",
		BesinTipi.KARBONHIDRAT: "KALIN BAÄIRSAK\n\nSindirim tamamlanmÄ±ÅŸ, emilim aÅŸamasÄ±.\nSu emilimi ve dÄ±ÅŸkÄ± oluÅŸumu gerÃ§ekleÅŸir.\n\nÃ‡alÄ±ÅŸma Durumu: ğŸŸ¡ Sindirim yok, emilim var"
	},
	"Karaciger": {
		BesinTipi.YOK: "Kimyasal sindirim YAPMAZ!\nKaraciÄŸerin Ã¼rettiÄŸi safra sÄ±vÄ±sÄ±, safra kanalcÄ±klarÄ± ile\nsafra kesesine boÅŸaltÄ±lÄ±r ve burada depolanÄ±r.",
		BesinTipi.YAG: "KARACÄ°ÄER\n\nSAFRA Ã¼retir!\nSafra yaÄŸlarÄ± kÃ¼Ã§Ã¼k damlacÄ±klara bÃ¶ler (emÃ¼lsifikasyon).\n\nÃ‡alÄ±ÅŸma Durumu: âœ… YaÄŸ sindirimi iÃ§in safra salgÄ±lÄ±yor",
		BesinTipi.PROTEIN: "KARACÄ°ÄER\n\nProtein sindirimi iÃ§in doÄŸrudan enzim salgÄ±lamaz.\nAma sindirilmiÅŸ proteinleri iÅŸler ve kullanÄ±r.\n\nÃ‡alÄ±ÅŸma Durumu: ğŸŸ¡ DolaylÄ± rol",
		BesinTipi.KARBONHIDRAT: "KARACÄ°ÄER\n\nKarbonhidrat sindirimi iÃ§in doÄŸrudan enzim salgÄ±lamaz.\nGlÃ¼koz depolanmasÄ± ve kullanÄ±mÄ± yapar.\n\nÃ‡alÄ±ÅŸma Durumu: ğŸŸ¡ DolaylÄ± rol"
	},
	"Pankreas": {
		BesinTipi.YOK: "Pankreas Ã¶zsuyunu Ã¼retir.\nAmilaz, Lipaz, Kimotripsinojen, Tripsinojen\nve NÃ¼kleik asitlerin sindiriminde\nyer alan nÃ¼kleaz enzimlerini barÄ±ndÄ±rÄ±r",
		BesinTipi.YAG: "PANKREAS\n\nLÄ°PAZ enzimi salgÄ±lar!\nYaÄŸlarÄ± yaÄŸ asitleri ve gliserole parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… YaÄŸ sindirimi iÃ§in lipaz salgÄ±lÄ±yor",
		BesinTipi.PROTEIN: "PANKREAS\n\nTRÄ°PSÄ°N enzimi salgÄ±lar!\nProteinleri kÃ¼Ã§Ã¼k peptitlere parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Protein sindirimi iÃ§in tripsin salgÄ±lÄ±yor",
		BesinTipi.KARBONHIDRAT: "PANKREAS\n\nAMÄ°LAZ enzimi salgÄ±lar!\nNiÅŸastayÄ± maltoz ve dekstrinlere parÃ§alar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Karbonhidrat sindirimi iÃ§in amilaz salgÄ±lÄ±yor"
	},
	"Bos": {
		BesinTipi.YOK: "Sindirim Sistemi SimÃ¼lasyonu'na HoÅŸgeldiniz :D",
		BesinTipi.YAG: "YaÄŸlar aÄŸÄ±z ve mideyi geÃ§erek ince baÄŸÄ±rsaÄŸa ulaÅŸÄ±r.\nPankreas tarafÄ±ndan salgÄ±lanan lipaz enzimi\nince baÄŸÄ±rsaÄŸa dÃ¶kÃ¼lÃ¼r ve yaÄŸlarÄ± parÃ§alar.\nYaÄŸlar emilime hazÄ±r hale gelir.\n\nVÃ¼cut durumu: âœ… YaÄŸ sindirimi gerÃ§ekleÅŸiyor.",
		BesinTipi.PROTEIN: "Proteinler midede pepsin ile kÄ±smen parÃ§alanÄ±r.\nÄ°nce baÄŸÄ±rsakta pankreasÄ±n salgÄ±ladÄ±ÄŸÄ± tripsin\nve peptidazlar proteinleri amino asitlere ayÄ±rÄ±r.\n\nVÃ¼cut durumu: âœ… Protein sindirimi gerÃ§ekleÅŸiyor.",
		BesinTipi.KARBONHIDRAT: "Karbonhidratlar aÄŸÄ±zda tÃ¼kÃ¼rÃ¼k amilazÄ± ile\nkÄ±smen parÃ§alanÄ±r.\nÄ°nce baÄŸÄ±rsakta pankreasÄ±n salgÄ±ladÄ±ÄŸÄ± amilaz\nkarbonhidratlarÄ± basit ÅŸekerlere dÃ¶nÃ¼ÅŸtÃ¼rÃ¼r.\n\nVÃ¼cut durumu: âœ… Karbonhidrat sindirimi gerÃ§ekleÅŸiyor.",
		},
	"Yutak": {
		BesinTipi.YOK: "YUTAK\n\nBesini yutarken gÄ±rtlak kapaÄŸÄ± soluk borusunu\nkapatÄ±r ve bu sayede boÄŸulmamÄ±zÄ± ENGELLER\n\nğŸŒŸSindirim sistemindeki Ã¶nemli bir parÃ§adÄ±r.",
		BesinTipi.YAG: "YUTAK\n\nBesini yutarken gÄ±rtlak kapaÄŸÄ± soluk borusunu\nkapatÄ±r ve bu sayede boÄŸulmamÄ±zÄ± ENGELLER\n\nğŸŒŸSindirim sistemindeki Ã¶nemli bir parÃ§adÄ±r.",
		BesinTipi.PROTEIN: "YUTAK\n\nBesini yutarken gÄ±rtlak kapaÄŸÄ± soluk borusunu\nkapatÄ±r ve bu sayede boÄŸulmamÄ±zÄ± ENGELLER\n\nğŸŒŸSindirim sistemindeki Ã¶nemli bir parÃ§adÄ±r.",
		BesinTipi.KARBONHIDRAT: "YUTAK\n\nBesini yutarken gÄ±rtlak kapaÄŸÄ± soluk borusunu\nkapatÄ±r ve bu sayede boÄŸulmamÄ±zÄ± ENGELLER\n\nğŸŒŸSindirim sistemindeki Ã¶nemli bir parÃ§adÄ±r."
	},
	"YemekBorusu": {
		BesinTipi.YOK: "Yemek borusu, besinleri Peristaltik hareketlerle\nmideye iletmekle gÃ¶revlidir\nPeristaltik hareketler sayesinde\nbesin yer Ã§ekimine zÄ±t olsa\nbile mideye iletilir.\nSindirim YAPMAZ!",
		BesinTipi.YAG: "YEMEK BORUSU\n\nPerostatik hareketler yaparak besinleri mideye indirir\nMukuslu yapÄ±sÄ± sayesinde KAYGANDIR\n\nÃ‡alÄ±ÅŸma Durumu: âœ… GeÃ§it gÃ¶revinde!",
		BesinTipi.PROTEIN: "YEMEK BORUSU\n\nPerostatik hareketler yaparak besinleri mideye indirir\nMukuslu yapÄ±sÄ± sayesinde KAYGANDIR\n\nÃ‡alÄ±ÅŸma Durumu: âœ… GeÃ§it gÃ¶revinde!",
		BesinTipi.KARBONHIDRAT: "YEMEK BORUSU\n\nPerostatik hareketler yaparak besinleri mideye indirir\nMukuslu yapÄ±sÄ± sayesinde KAYGANDIR\n\nÃ‡alÄ±ÅŸma Durumu: âœ… GeÃ§it gÃ¶revinde!"
	},
	"Safra": {
		BesinTipi.YOK: "Sindirime yardÄ±mcÄ± organdÄ±r.\nMideden gelen Kimus'u nÃ¶tralize eder.\nAntiseptik Ã¶zelliÄŸi ile baÄŸÄ±rsaktaki atÄ±klarÄ±n\nkokuÅŸmasÄ±nÄ± ve bakterilerin oluÅŸmasÄ±nÄ± engeller.",
		BesinTipi.YAG: "SAFRA KESESÄ°\n\nSafra salgÄ±sÄ±nÄ± virsÃ¼k kanalÄ±na verir.\nSafra salgÄ±sÄ± ile beraber yaÄŸlarÄ±n\nMekanik sinirimini saÄŸlar.\n\nÃ‡alÄ±ÅŸma Durumu: âœ… Mekanik sindirim yapmakta!",
		BesinTipi.PROTEIN: "SAFRA KESESÄ°\n\nProtein sindirimi iÃ§in enzim SALGILAMAZ.\nSadece yaÄŸlarÄ±n sindirimi iÃ§in safra salgÄ±sÄ± depolar.\n\nÃ‡alÄ±ÅŸma Durumu: âšª Protein sindiriminde rol almaz",
		BesinTipi.KARBONHIDRAT: "SAFRA KESESÄ°\n\nKarbonhidrat sindirimi iÃ§in enzim SALGILAMAZ.\nSadece yaÄŸlarÄ±n sindirimi iÃ§in safra salgÄ±sÄ± depolar.\n\nÃ‡alÄ±ÅŸma Durumu: âšª Karbonhidrat sindiriminde rol almaz"
	},

}

func _ready():
	_update_ui()
	
	if agiz_area:
		agiz_area.area_entered.connect(_on_agiz_area_entered)
	
	if organ_bilgi_label:
		organ_bilgi_label.visible = false

func _input(event):
	# MOUSE SOL TUÅA BASILDI
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		if event.pressed:
			_besin_veya_organ_tikla(event.position)
		else:
			# MOUSE BIRAKILDI
			tutulan_besin = null
	
	# MOUSE HAREKET EDÄ°YOR
	if event is InputEventMouseMotion and tutulan_besin != null:
		_besin_surukle(event.position)

func _besin_veya_organ_tikla(mouse_pos: Vector2):
	# 2D mouse pozisyonundan 3D dÃ¼zleme ray at
	var from = camera.project_ray_origin(mouse_pos)
	var to = from + camera.project_ray_normal(mouse_pos) * 1000
	
	var space_state = get_world_3d().direct_space_state
	var query = PhysicsRayQueryParameters3D.create(from, to)
	query.collide_with_areas = true
	
	var result = space_state.intersect_ray(query)
	
	print("ğŸ¯ TIKLANMA ALGILLANDI")
	
	if result:
		print("âœ… RAYCAST BÄ°R ÅEYE Ã‡ARPTI: ", result.collider.name)
		
		if result.collider is Area3D:
			var area = result.collider
			var parent = area.get_parent()
			
			print("ğŸ“¦ Area3D bulundu: ", area.name)
			print("ğŸ‘ª Parent: ", parent.name if parent else "YOK")
			print("ğŸ·ï¸ Gruplar: ", area.get_groups())
			
			# BESÄ°N MÄ°?
			if parent and parent is Node3D:
				if parent.name == "Yag" or parent.name == "Protein" or parent.name == "Karbonhidrat" or parent.name == "Su":
					tutulan_besin = parent
					offset = parent.global_position - result.position
					print("ğŸ–ï¸ TUTULDU: " + parent.name)
					return
			
			# ORGAN MI?
			if area.is_in_group("Organ"):
				print("ğŸ«€ ORGAN ALGILANDI!")
				var organ_adi = area.get_meta("organ_adi", "")
				print("ğŸ“ Organ adÄ± metadata: ", organ_adi)
				if organ_adi != "":
					_organa_git(organ_adi)
				else:
					print("âŒ organ_adi metadata BOÅ!")
			else:
				print("âŒ 'Organ' grubunda DEÄÄ°L")
	else:
		print("âŒ RAYCAST HÄ°Ã‡BÄ°R ÅEYE Ã‡ARPMADI")

func _besin_surukle(mouse_pos: Vector2):
	# Mouse pozisyonunu 3D dÃ¼nyaya Ã§evir
	var from = camera.project_ray_origin(mouse_pos)
	var normal = camera.project_ray_normal(mouse_pos)
	
	# Besinin ÅŸu anki Z eksenindeki uzaklÄ±ÄŸÄ±nÄ± kameradan hesapla
	var besin_z_distance = abs(camera.global_position.z - tutulan_besin.global_position.z)
	
	# Mouse'un o uzaklÄ±ktaki 3D pozisyonunu bul
	var yeni_pozisyon = from + normal * besin_z_distance
	
	# Offset'i uygula (tÄ±kladÄ±ÄŸÄ±n noktayÄ± tut)
	yeni_pozisyon += offset
	
	# Z EKSENÄ°NÄ° SABÄ°TLE - sadece X ve Y hareket edebilir
	var sabit_z = tutulan_besin.global_position.z
	tutulan_besin.global_position = Vector3(yeni_pozisyon.x, yeni_pozisyon.y, sabit_z)

func _on_agiz_area_entered(area):
	if area.get_parent() and area.get_parent() is Node3D:
		var besin = area.get_parent()
		
		if besin.name == "Yag":
			_besin_yenildi(BesinTipi.YAG, "YAÄ", yag_sesi)
		elif besin.name == "Protein":
			_besin_yenildi(BesinTipi.PROTEIN, "PROTEÄ°N", protein_sesi)
		elif besin.name == "Karbonhidrat":
			_besin_yenildi(BesinTipi.KARBONHIDRAT, "KARBONHÄ°DRAT", karbonhidrat_sesi)
		elif besin.name == "Su":
			_besin_yenildi(BesinTipi.YOK, "Su", yag_sesi)


func _besin_yenildi(tip: BesinTipi, isim: String, ses: AudioStreamPlayer):
	current_state = tip
	son_yenilen = isim
	_update_ui()

	if ses and ses.stream:
		ses.play()

	# sadece tutulan besini pasif yap
	if tutulan_besin:
		_besini_pasif_yap(tutulan_besin)

	tutulan_besin = null

	# sadece yenen besini geri getir
	_respawn_besin(tip)

	print("ğŸ½ï¸ YENÄ°LDÄ°: " + isim)
	# ğŸ”¥ STATE DEÄÄ°ÅTÄ° â†’ AÃ‡IKLAMAYI GÃœNCELLE
	_organ_aciklamasini_guncelle()




func _organa_git(organ_adi: String):
	secili_organ = organ_adi   # ğŸ”´ EN KRÄ°TÄ°K SATIR
	
	# Organ sesi
	if organ_sesi and organ_sesi.stream:
		organ_sesi.play()
	
	# Kamera
	if kamera_pozisyonlari.has(organ_adi):
		var tween = create_tween()
		tween.set_ease(Tween.EASE_IN_OUT)
		tween.set_trans(Tween.TRANS_CUBIC)
		tween.tween_property(camera, "position", kamera_pozisyonlari[organ_adi], 0.8)
	
	# Label pozisyonu
	if label_pozisyonlari.has(organ_adi):
		var tween_label = create_tween()
		tween_label.set_ease(Tween.EASE_OUT)
		tween_label.set_trans(Tween.TRANS_CUBIC)
		tween_label.tween_property(
			organ_bilgi_label,
			"position",
			label_pozisyonlari[organ_adi],
			0.5
		)
	
	# ğŸ”¥ ASIL Ä°Å BURADA
	_organ_aciklamasini_guncelle()


func _update_ui():
	if ui_label:
		ui_label.text = "EN SON YENÄ°LEN: " + son_yenilen

func _besini_pasif_yap(besin: Node3D):
	if not besin:
		return
	
	besin.visible = false
	
	var area := besin.get_node_or_null("Area3D")
	if area:
		area.set_deferred("monitoring", false)
		area.set_deferred("monitorable", false)


func _respawn_besin(tip: BesinTipi):
	var besin: Node3D
	var spawn: Node3D

	match tip:
		BesinTipi.YAG:
			besin = $Besinler/Yag
			spawn = respawn_yag
		BesinTipi.PROTEIN:
			besin = $Besinler/Protein
			spawn = respawn_protein
		BesinTipi.KARBONHIDRAT:
			besin = $Besinler/Karbonhidrat
			spawn = respawn_karbonhidrat
		BesinTipi.YOK:
			besin = $Besinler/Su
			spawn = respawn_su

	if not besin or not spawn:
		return
	
	besin.global_position = spawn.global_position
	besin.visible = true
	
	var area := besin.get_node_or_null("Area3D")
	if area:
		area.set_deferred("monitoring", true)
		area.set_deferred("monitorable", true)

func _organ_aciklamasini_guncelle():
	if secili_organ == "":
		return
	
	#if current_state == BesinTipi.YOK:
		#organ_bilgi_label.text = "Ã–nce bir besin yemelisin!"
		#organ_bilgi_label.visible = true
		#return
	
	if organ_aciklamalari.has(secili_organ):
		var aciklama = organ_aciklamalari[secili_organ].get(current_state, "")
		if aciklama != "":
			organ_bilgi_label.text = aciklama
			organ_bilgi_label.visible = true
